bk_ida/gccida/g0/validize_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/validize_mem/src/explow.c:1088:25: error: use of undeclared identifier 'machine_mode'
|| !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)ref + 2), ref->fld[0].rtx) ) 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/validize_mem/src/obj/explow.o] Error 1
